# hello_spin

./: Cargo.toml  Dockerfile  README.md  spin.toml
cloud/: deployment.yaml
src/: lib.rs
src/images/: color_palette.rs  color_utils.rs  mod.rs
src/mandelbrot/: mod.rs
src/mandelbrot/boundary/: fractal_http_component.rs  mod.rs
src/mandelbrot/control/: iteration_function.rs  mandelbrot.rs  mod.rs
src/mandelbrot/entity/: fractal.rs
src/system/: initialization.rs
tests/: mandelbrot.http
