[package]
name = "hello_spin"
authors = ["ingo.weichsel"]
description = "Compute fractals using web assembly"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "2.2.0"
image = "0.24.9"
rgb = "0.8.37"
log = "0.4.20"
serde_json = "1.0.114"
serde_qs = "0.12.0"
time = "0.3.34"
serde = { version = "1.0.197", features = ["derive"] }
rayon = "1.8.1"
http = "0.2.12"
simple_logger = "4.3.3"
config = "0.14.0"
[workspace]
